# Detecting-Tennis-Anomalies-JEPA

./: README.md  anomalies.csv  anomalies_per_year.csv  anomaly_labels.csv  main.py  model.pt  model_outputs.csv  model_params.csv  player_anomalies.csv  players_most_anomalies.csv  pyproject.toml  replit.nix  test_predictions.npy  tournament_anomalies.csv  tournaments_most_anomalies.csv  tournaments_with_most_anomalies.csv
input/: atp_matches_2016.csv
model/: best_model.pt  final_model.pt  model_outputs.h5
output/: players_with_most_negative_anomalies.csv  players_with_most_positive_anomalies.csv  years_with_most_anomalies.csv
